# RK

./: CMakeLists.txt
.github/workflows/: release.yml
src/: Calculate.hpp  CustomerSupporter.hpp  Employee.hpp  EmployeeVisitor.hpp  IncentiveCalculationVisitor.hpp  PrintInformationVisitor.hpp  SalesPerson.hpp  SoftwareEngineer.hpp  main.cpp  visitor_pattern.cpp
tests/: test_incentive.cpp
